--- a/styles/mixin.module.scss
+++ b/styles/mixin.module.scss
@@ -24,3 +24,19 @@
 	@content;
   }
 }
+
+@mixin animation-in{
+  @keyframes open-modal {
+	0% {
+	  opacity: 0;
+	  transform: scale(0.6);
+	}
+
+	100% {
+	  opacity: 1;
+	  transform: scale(1);
+	}
+  }
+}
+
+
