--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,11 +5,7 @@
 .main {
   min-height: 100vh;
   padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-left: 270px;
 }
 
 .footer {
