--- a/components/ui/navUI/link.module.scss
+++ b/components/ui/navUI/link.module.scss
@@ -1,26 +1,26 @@
 .link{
   list-style: none;
-
-
   .link_item{
     display: block;
     text-decoration: none;
     cursor: pointer;
-    padding: 2em 0;
-    a{
-      display: flex;
-      align-items: center;
-      gap: 0.3em;
-      span{
-        display: block;
-      }
-    }
 
+
+
+  }
+  .link_item_link{
+    display: flex;
+    align-items: center;
+    padding: .1em 1em;
+    gap: 0.3em;
+    span{
+      display: block;
+    }
   }
 }
 .active{
-  border-right: solid 4px black;
-  background: rgba(61, 46, 1, 0.16);
+  border-right: solid 4px rgba(248, 186, 14, 0.85);
+  background: rgba(213, 157, 0, 0.16);
   padding: 0.5em 0;
   width: 100%;
 }
