--- a/components/ui/bankAccount/bankAcountCard.module.scss
+++ b/components/ui/bankAccount/bankAcountCard.module.scss
@@ -10,5 +10,13 @@
   text-align: center;
   .bank_card_title{
     font-size: 2rem;
+
   }
+}
+.bank_title{
+  text-align: center;
+  padding-bottom:0.3rem;
+  border-radius: 0.2em;
+  border: solid 2px rgba(248, 186, 14, 0.85);
+  border-bottom: none;
 }
