--- a/components/ui/bankAccount/bankAccountHeader.module.scss
+++ b/components/ui/bankAccount/bankAccountHeader.module.scss
@@ -1,13 +1,16 @@
 @import "styles/variables.module";
 @import "styles/mixin.module";
 .bank_account_header{
-
+  display: flex;
+  gap: 1em;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .bank_account_header_add_btn{
   background: transparent;
   outline: none;
-  border: none;
-  padding:.8em 1.5em ;
+  padding:.5em 1.5em ;
   cursor: pointer;
   border: solid 1px rgba(248, 186, 14, 0.85);
   font-size: 2rem;
@@ -16,8 +19,10 @@
 }
 @include md{
   .bank_account_header{
-	display: flex;
-	align-items: center;
-	gap: 1em;
+	flex-direction: row;
+    align-self: flex-start;
+    .bank_account_section_btn{
+      align-self: end;
+    }
   }
 }
