--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -1,6 +1,6 @@
 $primary-color: #fff6db;
 $black: #171414;
-$modal-background : rgba(0, 0, 0, 0.78);
+$modal-background : rgba(0, 0, 0, 0.85);
 $modal-content-background : $primary-color;
 $open-modal: open-modal 1s ease 0s 1 normal forwards;
 $modal-text-align:center;
@@ -12,4 +12,10 @@ $breakpoints:(
         "xl":1200px,
 
 );
+$neumorphism-background: linear-gradient(45deg, #e6ddc5, #ffffea);
+$neumorphism-background-black: linear-gradient(145deg, #2d2c2a, #363432);
+$neumorphism-box-shadow:2px 2px 2px #D9D1BB, -2px -5px 10px #cccc;
+$neumorphism-box-shadow-black:5px 5px 10px #2b2a28,
+-5px -5px 10px #3a3836;
+
 
