--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+@import "variables.module";
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -23,6 +24,6 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: $neumorphism-background-black;
   }
 }
