--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,10 +2,18 @@
   margin: auto 2rem;
   padding: 2rem 0;
 }
-
+.grid_container{
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: auto repeat(3, 1fr) auto;
+  grid-column-gap: 0;
+  grid-row-gap: 0;
+}
 .main {
+  grid-area: 2 / 2 / 5 / 9;
   min-height: 100vh;
-  margin-left: 270px;
+  z-index: 1;
+
 }
 
 .footer {
@@ -16,6 +24,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  grid-area: 5 / 1 / 6 / 9;
 }
 
 .footer a {
