--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,13 +4,13 @@
 }
 .grid_container{
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: auto repeat(3, 1fr) auto;
+  grid-template-columns: auto repeat(8, 1fr);
+  grid-template-rows: auto repeat(7, 1fr) auto;
   grid-column-gap: 0;
   grid-row-gap: 0;
 }
 .main {
-  grid-area: 2 / 2 / 5 / 9;
+  grid-area: 2 / 2 / 9 / 10;
   min-height: 100vh;
   z-index: 1;
 
@@ -24,7 +24,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  grid-area: 5 / 1 / 6 / 9;
+  grid-area: 9 / 2 / 10 / 10;
 }
 
 .footer a {
