--- a/components/ui/bankAccount/bankAccountHeader.module.scss
+++ b/components/ui/bankAccount/bankAccountHeader.module.scss
@@ -6,6 +6,8 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  flex-grow: 1;
+  width: 400px;
 }
 .bank_account_header_add_btn{
   background: transparent;
