--- a/styles/mixin.module.scss
+++ b/styles/mixin.module.scss
@@ -59,4 +59,10 @@
 	}
   }
 }
+@mixin card{
+  background: $neumorphism-background-black;
+  box-shadow: $neumorphism-box-shadow-black;
+  border: 1em;
+  padding: 2em 1.5em;
+}
 
